# microbial-lims

./: .cruft.json  .env.public  .gitignore  .gitlab-ci.yml  .linkmllint.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  Microbial Strain ELabFTW Model.hck.json  README.md  config.yaml  generate_erd.py  microbial_experiment.yaml  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
AgitationEnum/: index.html
AgitationValue/: index.html
ArrayValue/: index.html
BactoBoxAcquisition/: index.html
BactoBoxAcquisitionTemplateNameValue/: index.html
BooleanValue/: index.html
CFUMethodEnum/: index.html
CountValue/: index.html
Curie/: index.html
CytoFLEXAcquisition/: index.html
Date/: index.html
DifcoAmendedSporulationAgarProtocol/: index.html
Double/: index.html
DurationValue/: index.html
ELabItem/: index.html
ELabItemValue/: index.html
ELabRecord/: index.html
Experiment/: index.html
ExperimentWithInstrumentNoData/: index.html
FCInjectionModeEnum/: index.html
FixationMethodEnum/: index.html
Float/: index.html
FormaldehydeFixation/: index.html
FormaldehydeFixationTemplateNameValue/: index.html
GenericTemplate/: index.html
IncubationAtmosphereValue/: index.html
InitiateGrowthOfBSpizizeniiTemplateNameValue/: index.html
InstrumentIDValue/: index.html
Integer/: index.html
Jsonpointer/: index.html
LabCASInstrumentValue/: index.html
LabCASMicrobialMaterialIDValue/: index.html
LabCASOperatorValue/: index.html
LabCASProjectValue/: index.html
LengthUnitEnum/: index.html
LengthValue/: index.html
LogCOMETSamplePrep/: index.html
MicroscopyAcquisitionTemplateNameValue/: index.html
ModalitiesValue/: index.html
NucleicAcidExtraction/: index.html
NucleicAcidTypeValue/: index.html
NumberValue/: index.html
ObjectivesEnum/: index.html
OperatorIDValue/: index.html
SamplePurposeCodeEnum/: index.html
SlideCleaningTemplateNameValue/: index.html
Sparqlpath/: index.html
String/: index.html
TemperatureUnitEnum/: index.html
TemperatureValue/: index.html
TransmissionModeEnum/: index.html
TransmissionModeValue/: index.html
UnitlessEnum/: index.html
Uri/: index.html
Uriorcurie/: index.html
VolumeValue/: index.html
api_url/: index.html
bead_lot_number_size_qc/: index.html
category_title/: index.html
cell_volume/: index.html
cfu_method/: index.html
core_data_path/: index.html
credits/: index.html
data_acquisition_date/: index.html
diluent_name/: index.html
diluent_volume/: index.html
docs/: AgitationEnum.md  AgitationValue.md  ArrayValue.md  BactoBoxAcquisition.md  BactoBoxAcquisitionTemplateNameValue.md  Boolean.md  BooleanValue.md  CFU.md  CFUMethodEnum.md  CFUMethodValue.md  CFUTemplateNameValue.md  CellCultureInBroth.md  CellCultureInBrothTemplateNameValue.md  CoulterAcquisition.md  CoulterAcquisitionTemplateNameValue.md  CountUnitEnum.md  CountValue.md  Curie.md  CytoFLEXAcquisition.md  CytoFLEXAcquisitionTemplateNameValue.md  CytoFLEXVolumeCalibration.md  CytoFLEXVolumeCalibrationTemplateNameValue.md  Date.md  DateOrDatetime.md  DateValue.md  Datetime.md  Decimal.md  DifcoAmendedSporulationAgarProtocol.md  DifcoAmendedSporulationAgarProtocolTemplateNameValue.md  Double.md  DurationUnitEnum.md  DurationValue.md  ELabExperiment.md  ELabExperimentType.md  ELabItem.md  ELabItemType.md  ELabItemValue.md  ELabRecord.md  ELabUser.md  Experiment.md  (+139 more)
elab_experiment/: index.html
elabid/: index.html
error_flag/: index.html
examples/: README.md  cytoflex_acquisition.json
fc_acquisition_count_target/: index.html
fc_acquisition_threshold_channel/: index.html
fc_acquisition_threshold_value/: index.html
python/: experiments.json  exporter.py  pyproject.toml
(+160 files in other folders)
