[project]
name = "microbial_experiment_schema"
version = "0.0.0"
description = "Metadata schemas for validation of ELN data entries as part of the Microbial LIMS project"
authors = [{name = "Joshua Taillon", email = "joshua.taillon@nist.gov>"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "linkml-runtime (>1.8.2)"
]

[project.optional-dependencies]
docs = ["linkml", "mkdocs-material"]

[project.scripts]
generate_viz_json = "src.microbial_experiment_schema.scripts.generate_json:generate_viz_json"

[tool.poetry]
include = ["README.md", "src/microbial_experiment_schema/schema", "src/microbial_experiment_schema/datamodel", "project"]

[tool.poetry.group.dev.dependencies]
linkml = "^1.8.3"
mkdocs-material = "^9.5.34"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.3.1"
codespell = "^2.3.0"
mkdocs = "^1.6.1"
tomli = "^2.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.codespell]
skip = './python/experiments.json,./site/*,./**/d3.v7.min.js'