[tool.poetry]
name = "microbial-strain-export"
version = "0.1.0"
description = "Code to download, export, validate, and process Microbial Strain experiments from ELabFTW"
authors = ["Joshua Taillon <joshua.taillon@nist.gov>"]
readme = "README.md"
license = "NIST Public License"

[tool.poetry.dependencies]
python = "^3.12"
linkml = "^1.8.3"
elabapi = {path = "/home/jat/git_repos/elabftw-python-api", develop = true}
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
